--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "ts-todo app",
   "devDependencies": {
+    "@types/jquery": "^3.3.1",
     "ts-loader": "^4.1.0",
     "typescript": "^2.7.2",
     "webpack": "^4.1.1",
